refactor class object for connection
